--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -78,6 +78,16 @@ jobs:
         with:
           plugins: |
             ['@semantic-release/commit-analyzer', '@semantic-release/release-notes-generator', '@semantic-release/github']
+          branches: |
+            [
+              '+([0-9])?(.{+([0-9]),x}).x',
+              'main',
+              'master',
+              {
+                name: 'beta',
+                prerelease: true
+              }
+            ]
 
       - name: Compute version
         id: vars
