--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -72,22 +72,24 @@ jobs:
 
       - name: Run Semantic Release
         id: semrel
-        uses: docker://ghcr.io/bcit-ltc/semantic-release:sha-6ba64a5df332130d98182e3aee931ec84aa35604
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: codfish/semantic-release-action@v4
         with:
-          plugins: |
-            ['@semantic-release/commit-analyzer', '@semantic-release/release-notes-generator', '@semantic-release/github']
           branches: |
             [
-              '+([0-9])?(.{+([0-9]),x}).x',
-              'main',
-              'master',
+              "main",
               {
-                name: 'beta',
-                prerelease: true
+                "name": "beta",
+                "prerelease": true
               }
             ]
+          plugins: |
+            [
+              "@semantic-release/commit-analyzer",
+              "@semantic-release/release-notes-generator",
+              "@semantic-release/github"
+            ]
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compute version
         id: vars
