adds git to semantic release plugin list

--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -78,7 +78,8 @@ jobs:
             [
               '@semantic-release/commit-analyzer',
               '@semantic-release/release-notes-generator',
-              '@semantic-release/github'
+              '@semantic-release/github',
+              '@semantic-release/git'
             ]
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
