--- a/.github/workflows/build-and-push-app.yaml
+++ b/.github/workflows/build-and-push-app.yaml
@@ -74,6 +74,10 @@ jobs:
         uses: docker://ghcr.io/codfish/semantic-release-action@sha256:327a3ce08284f9dd9b83b607e3f668dae90139e68ce90780b0a43a09d577dc3a
         id: semrel
         with:
+          additional_packages: |
+            [
+              "@semantic-release/git"
+            ]
           plugins: |
             [
               '@semantic-release/commit-analyzer',
